--- a/src/mainTestes/Contador.css
+++ b/src/mainTestes/Contador.css
@@ -13,3 +13,20 @@
 	-fx-text-fill: #eee;
 	-fx-font-size: 28px
 }
+
+.botoes{
+	-fx-background-color: #fff;
+	-fx-text-fill : #48b2ee;
+	-fx-font-size: 28px;
+	-fx-min-width: 60px;
+	-fx-min-height: 60px;
+	-fx-background-radius: 30px;
+}
+
+.verde{
+	-fx-text-fill : #0eb612;
+}
+
+.vermelho{
+	-fx-text-fill : #c40000;
+}
